--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # ANNOTATION config
-PROTEINS_FILE: test/proteins.fasta
-OUTPUT_DIR: test/ANNOTATION_OUTPUT
+ORF_PREDICTION_DIR: test/INPUT_ORFPRED # input
+OUTPUT_DIR: test
 
 CLUSTERING:
   IDENTITY: 0.5
