--- a/dependencies/envs/sensitive-search.yml
+++ b/dependencies/envs/sensitive-search.yml
@@ -3,9 +3,8 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - hhsuite 
+  - python
   - pandas
-  - numpy
-  - pip
+  - pathlib
   - pip:
     - csb
