--- a/dependencies/envs/hhsuite.yml
+++ b/dependencies/envs/hhsuite.yml
@@ -3,4 +3,9 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - hhsuite=3.3.0
+  - hhsuite 
+  - pandas
+  - numpy
+  - pip
+  - pip:
+    - csb
