--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ test/output
 .snakemake
 nohup.out
 dependencies/scripts/__pycache__
+test/data/GS_G017_40K_KL30.fasta
+test/data/GS_G018_40K_KL61.fasta
+test/data/GS_G028_39K_KL25.fasta
