--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ dependencies/scripts/__pycache__
 test/data/GS_G017_40K_KL30.fasta
 test/data/GS_G018_40K_KL61.fasta
 test/data/GS_G028_39K_KL25.fasta
+cyanophages/
