--- a/dependencies/envs/orf-prediction.yml
+++ b/dependencies/envs/orf-prediction.yml
@@ -7,7 +7,6 @@ dependencies:
   - biopython=1.79
   - bedtools=2.30.0
   - glimmer=3.02
-  - phanotate=1.5.0
-  - prodigal=2.6.3
+  - prodigal-gv=2.11.0
   - pathlib=1.0.1
   - pandas=1.4.3
