--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ test/data/GS_G017_40K_KL30.fasta
 test/data/GS_G018_40K_KL61.fasta
 test/data/GS_G028_39K_KL25.fasta
 cyanophages/
+sftp-config.json
+test_prodigalgv.sh
+test_prodigalgv.yml
+dependencies/envs/.DS_Store
